      \file{NA}.  (\PR{14808})

      \item \code{list2env()} did not check the type of its \code{envir}
      argument. (\PR{14807})

      \item \code{svg()} could segfault if called with a non-existent
      filename.  (\PR{14790})
      
      \item \command{make install} can install to a path containing
      \samp{+} characters. (\PR{14798})
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.14.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{parallel::detectCores()} is now able to find the
      number of physical cores (rather than CPUs) on Sparc Solaris.

      It can also do so on most versions of Windows; however the default
      remains \code{detectCores(logical = TRUE)} on that platform.

      \item Reference classes now keep a record of which fields are
      locked.  \code{$lock()} with no arguments returns the names % $
      of the locked fields.

      \item \code{HoltWinters()} reports a warning rather than an error
      for some optimization failures (where the answer might be a
      reasonable one).

      \item \code{tools::dependsOnPkg()} now accepts the shorthand
      \code{dependencies = "all"}.

      \item \code{parallel::clusterExport()} now allows specification of
      an environment from which to export.

      \item The \code{quartz()} device now does tilde expansion on its
      \code{file} argument.

      \item \code{tempfile()} on a Unix-alike now takes the process ID
      into account.  This is needed with \CRANpkg{multicore} (and as part of
      \pkg{parallel}) because the parent and all the children share a
      session temporary directory, and they can share the C random
      number stream used to produce the unique part.  Further, two
      children can call \code{tempfile()} simultaneously.

      \item Option \code{print} in Sweave's \code{RweaveLatex()} driver
      now emulates auto-printing rather than printing (which can differ
      for an S4 object by calling \code{show()} rather than